--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Xin Việt</title>
 
   <base href="http://xinviet.com/">
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
 
   <meta name="description" content="xin viet littleshin shopping xin việt ">
   <meta name="keyword" content="xin viet littleshin shopping xin việt việt xin">
   <meta name="author" content="lijiang gogotrans">
 
 
-  <link rel="icon" type="image/png" href="assets/icon/icons8-x-coordinate-48.png" />
+  <link rel="icon" type="image/png" href="assets/icon/icons8-x-coordinate-48.png"/>
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <script src="cordova.js"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.0dabdfe8c11c6c92b3b7.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.6aa87e90c8887dbd4159.js" type="module"></script><script src="polyfills-es2015.c734d0ab89776e22a1b5.js" type="module"></script><script src="runtime-es5.d2a9c196264be3b69d64.js" nomodule></script><script src="polyfills-es5.62b9b09bea3def2d69e9.js" nomodule></script><script src="main-es2015.86c6c612069e514d3381.js" type="module"></script><script src="main-es5.7ec72f6a6f4a6348b445.js" nomodule></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime-es2015.129274cabd64b1542790.js" type="module"></script><script src="polyfills-es2015.c734d0ab89776e22a1b5.js" type="module"></script><script src="runtime-es5.b2decd2938e91fe8fead.js" nomodule></script><script src="polyfills-es5.62b9b09bea3def2d69e9.js" nomodule></script><script src="main-es2015.e4319078dea81fbaa6f2.js" type="module"></script><script src="main-es5.1ef835a647aadc592833.js" nomodule></script></body>
 
 </html>
