--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Xin Việt</title>
 
   <base href="http://xinviet.com/">
+
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
@@ -18,8 +19,37 @@
   <link rel="icon" type="image/png" href="assets/icon/icons8-x-coordinate-48.png"/>
 
   <!-- add to homescreen for ios -->
+  <!-- 允许使用独立模式显示Web内容-->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+
+  <!-- 苹果应用的名字-->
+  <meta name="apple-mobile-web-app-title" content="Wallet">
+
+
+  <!-- 自定义苹果的图标-->
+  <link rel="apple-touch-icon" href="assets/icon/icons8-x-coordinate-48.png">
+
+  <!-- 针对不同屏幕大小，使用不同图标 -->
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icon/icons8-x-coordinate-48.png">
+  ....
+
+  <!-- 自定义苹果启动界面的图片-->
+  <link rel="apple-touch-startup-image" href="assets/icon/icons8-x-coordinate-48.png">
+
+  <!-- 针对不同屏幕大小，自定义苹果启动界面的图片-->
+  <!-- iPhone Xs Max (1242px x 2688px) -->
+  <link href="assets/icon/icons8-x-coordinate-48.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+  .......
+
+  <!-- 设置状态栏样式，black-translucent、 black、default-->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+
+
+
+
+
   <script src="cordova.js"></script>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
@@ -28,6 +58,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.db6d74e038da5e533646.js" type="module"></script><script src="polyfills-es2015.c734d0ab89776e22a1b5.js" type="module"></script><script src="runtime-es5.b5d191121cf2da9ca97a.js" nomodule></script><script src="polyfills-es5.62b9b09bea3def2d69e9.js" nomodule></script><script src="main-es2015.149fa36ee6c0d21298d0.js" type="module"></script><script src="main-es5.b48eb7491333c6f62ec2.js" nomodule></script></body>
+<script src="runtime-es2015.b405576de33ffc92eff4.js" type="module"></script><script src="polyfills-es2015.c734d0ab89776e22a1b5.js" type="module"></script><script src="runtime-es5.ec0fbce716fae6b930f5.js" nomodule></script><script src="polyfills-es5.62b9b09bea3def2d69e9.js" nomodule></script><script src="main-es2015.9c9ec8a04ba66f17483a.js" type="module"></script><script src="main-es5.bb231dea9d06639020ad.js" nomodule></script></body>
 
 </html>
